# monib.life

./: .eslintrc.json  .gitignore  .gitmodules  .npmrc  AGENTS.md  Dockerfile  Makefile  README.md  clean-path.sh  flake.nix  integration.test.ts  monib.sh  next.config.js  package-lock.json  package.json  project-sources.json  pytest.ini  quartz.config.ts  quartz.layout.ts  tailwind.config.js  tsconfig.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 35z4bpcv3dqkv26jvnkl3yxbk6ck98zc-source  lprim0hl52b1gydrjinwfwvzbqr2wiz0-source
.github/workflows/: build.yml
admin-api/: README.md  TESTING.md  pyproject.toml
admin-api/app/: __init__.py  jobs.py  logging_config.py  main.py  models.py  storage.py
admin-api/app/routers/: health.py  jobs.py  upload.py
admin-api/tests/: __init__.py  test_api.py  test_api_integration.py  test_job_manager.py  test_storage.py
admin-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
admin-ui/coverage/: coverage-final.json  index.html
admin-ui/src/: App.css  App.tsx
cli/: README.md  unified.py
content/: about.md  agents.md  getting-started.md  index.md  private-note.md
docs/: ADMIN_DASHBOARD.md  FLAKE_ARCHITECTURE.md
private/: README.md
public/: 404.html  index.html  index.xml  sitemap.xml
public/projects/: index.html  (+2 more)
reading-assistant/: requirements.txt  server.py  test_book_processing.py
scripts/: README.md  add-book.sh  admin-dev.sh  admin-full.sh  admin-server.sh  admin-ui.sh  build.sh  clean.sh  common.sh  convert-help.sh  convert.sh  deploy.sh  dev.sh  help.sh  install.sh  process-books.sh  stop.sh  summarize-to-epub-pdf.sh  sync-projects.sh  sync-vault.sh  test.sh
services/: COMPOSITION.md  INTEGRATION_PLAN.md
services/conversion-service/: .gitignore  README.md  convert.sh  debug_html.py  fix_headers.py  flake.nix  pyproject.toml  verify_fixed.py  verify_links.py
services/conversion-service/src/: __init__.py  cli.py
services/conversion-service/src/converters/: __init__.py  base_converter.py  epub_converter.py  markdown_to_pdf_converter.py  mobi_converter.py  pdf_converter.py
tests/: README.md  __init__.py  conftest.py
vault/: index.md
website/: README.md  astro.config.mjs  integration.test.ts  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
(+125 files in other folders)
